Update navigation links and add submenu for facilities

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Student Corner</a>
                             <div class="dropdown-menu m-0">
                                 <a href="destination.html" class="dropdown-item">Code of Conduct</a>
                                 <a href="tour.html" class="dropdown-item">Anti Ragging</a>
@@ -227,7 +227,21 @@
                                 <a href="gallery.html" class="dropdown-item">NAP</a>
                                 <a href="guides.html" class="dropdown-item">Find Blood Group</a>
                                 <a href="testimonial.html" class="dropdown-item">Forms</a>
-                                <a href="404.html" class="dropdown-item">Facilities</a>
+                                <div class="dropdown-submenu">
+                                    <a href="#" class="dropdown-item submenu-toggle">
+                                                 Facilities ➤
+                                                            </a>
+
+                                        <div class="dropdown-menu submenu">
+                                  <a class="dropdown-item" href="#">Infrastructure</a>
+                                <a class="dropdown-item" href="#">Central Library</a>
+                                <a class="dropdown-item" href="#">Digital Library</a>
+                                <a class="dropdown-item" href="#">Language Lab</a>
+                                <a class="dropdown-item" href="#">Wi-Fi Campus</a>
+                                <a class="dropdown-item" href="#">Computer Laboratory</a>
+                                <a class="dropdown-item" href="#">Canteen</a>
+                                 </div>
+                                    </div>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
@@ -240,7 +254,7 @@
                                 
                             </div>
                         </div>
-                        <a href="blog.html" class="nav-item nav-link">Photo Gallery</a>
+                        <a href="blog.html" class="nav-item nav-link">Gallery</a>
                     </div>
                     
                 </div>
