--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <div class="nav-item dropdown">
-  <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
+  <a href="#" class="nav-link dropdown-toggle">
     About
   </a>
 
@@ -120,7 +120,7 @@
 </div>
 
                         <div class="nav-item dropdown">
-  <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">
+  <a class="nav-link dropdown-toggle" href="#">
     Academics
   </a>
 
@@ -227,21 +227,23 @@
                                 <a href="gallery.html" class="dropdown-item">NAP</a>
                                 <a href="guides.html" class="dropdown-item">Find Blood Group</a>
                                 <a href="testimonial.html" class="dropdown-item">Forms</a>
-                                <div class="dropdown-submenu">
-                                    <a href="#" class="dropdown-item submenu-toggle">
-                                                 Facilities ➤
-                                                            </a>
+                             <li class="dropdown-submenu dropdown-submenu-up">
+  <a class="dropdown-item" href="#">
+    Facilities <span>▶</span>
+  </a>
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="#">Infrastructure</a></li>
+    <li><a class="dropdown-item" href="#">Central Library</a></li>
+    <li><a class="dropdown-item" href="#">Digital Library</a></li>
+    <li><a class="dropdown-item" href="#">Language Lab</a></li>
+    <li><a class="dropdown-item" href="#">Wi-Fi Campus</a></li>
+  </ul>
+</li>
 
-                                        <div class="dropdown-menu submenu">
-                                  <a class="dropdown-item" href="#">Infrastructure</a>
-                                <a class="dropdown-item" href="#">Central Library</a>
-                                <a class="dropdown-item" href="#">Digital Library</a>
-                                <a class="dropdown-item" href="#">Language Lab</a>
-                                <a class="dropdown-item" href="#">Wi-Fi Campus</a>
-                                <a class="dropdown-item" href="#">Computer Laboratory</a>
-                                <a class="dropdown-item" href="#">Canteen</a>
-                                 </div>
-                                    </div>
+
+
+
+
                             </div>
                         </div>
                         <div class="nav-item dropdown">
