--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Travela - Tourism Website Template</title>
+        <title> ABOUT US</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -89,9 +89,9 @@
                         <a href="packages.html" class="nav-item nav-link">Packages</a>
                         <a href="blog.html" class="nav-item nav-link">Blog</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">TAP</a>
                             <div class="dropdown-menu m-0">
-                                <a href="destination.html" class="dropdown-item">Destination</a>
+                                <a href="destination.html" class="dropdown-item">CDC</a>
                                 <a href="tour.html" class="dropdown-item">Explore Tour</a>
                                 <a href="booking.html" class="dropdown-item">Travel Booking</a>
                                 <a href="gallery.html" class="dropdown-item">Our Gallery</a>
