updated CDC file

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">TAP</a>
                             <div class="dropdown-menu m-0">
-                                <a href="destination.html" class="dropdown-item">CDC</a>
+                                <a href="hello.html" class="dropdown-item">CDC</a>
                                 <a href="destination.html" class="dropdown-item">Internships</a>
                                 <a href="destination.html" class="dropdown-item">Placements</a>
                                 <a href="destination.html" class="dropdown-item">Extra</a>
