--- a/gallery.html
+++ b/gallery.html
@@ -124,8 +124,8 @@
         <!-- Gallery Start -->
         <div class="container-fluid gallery py-5 my-5">
             <div class="mx-auto text-center mb-5" style="max-width: 900px;">
-                <h5 class="section-title px-3">Our Gallery</h5>
-                <h1 class="mb-4">Tourism & Traveling Gallery.</h1>
+                <h5 class="section-title px-3">OUR GALLERY </h5>
+                <h1 class="mb-4">CHECKOUT THE NEW THINGS HAPPEN IN OUR COLLEGE</h1>
                 <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum tempore nam, architecto doloremque velit explicabo? Voluptate sunt eveniet fuga eligendi! Expedita laudantium fugiat corrupti eum cum repellat a laborum quasi.
                 </p>
             </div>
