Add container div for banner and navbar

--- a/index.html
+++ b/index.html
@@ -86,9 +86,11 @@
 
 
     <!-- Topbar End -->
+    <div class="container-fluid">
   <div id="banner"></div>
    <div id="navbar"></div> 
     <!-- Topbar Start -->
+    </div>
  
         <!-- Carousel Start -->
         <div class="carousel-header hero-carousel">
